objects/BMCServiceDesk__BMC_ApplicationSystem__c.object
<CustomObject>
    <description>BMC_ApplicationSystem. CMDB Class that stores information about an application or a software system that supports a particular business function and that can be managed as an independent unit.  This class cannot be instantiated. To decompose the system into its technical components, relate an instance of this class to its component BMC_SoftwareServer instance using the BMC_Dependency class. For example, a J2EE run-time environment would be represented by BMC_SoftwareServer.  BMC_ApplicationSystem also represents the core class of the application system&apos;s submodel of the application runtime model. Its role in the system&apos;s submodel is to represent the root node of the containment hierarchy of the application elements (at runtime) as services, components, subsystems, and the main entry point to the navigation through and drill-down into the runtime model.</description>
    <fields>
        <fullName>BMCServiceDesk__BuildNumber__c</fullName>
        <label>Build Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PatchNumber__c</fullName>
        <label>Patch Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ServicePack__c</fullName>
        <label>Service Pack</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>Application System</label>
    <nameField>
        <label>BMC_ApplicationSystem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>